[package]
name = "rpack_toolbox"
version = "0.2.0"
edition = "2024"

# TODO: (when gui is added) Uncomment this
# [features]
# default = ["cli", "gui"]

[dependencies]
# TODO: (when gui is added) Make this crate optional
cli = { path = "../cli" }
log = "0.4.29"
pretty_env_logger = "0.5.0"
shared = { path = "../shared" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.2.2"
assert_fs = "1.1.4"
image = { version = "0.25.10", default-features = false, features = ["png"] }
predicates = "3.1.4"
