[package]
name = "cli"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clio = { version = "0.3.5", features = ["clap-parse"] }
colored = "3.1.1"
indicatif = "0.18.4"
log = "0.4.29"
shared = { path = "../shared" }
tabled = { version = "0.20.0", features = ["derive"] }
