[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
imagesize = { version = "0.14.0", default-features = false, features = ["png"] }
json5 = "1.3.1"
log = "0.4.29"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt"] }
walkdir = "2.5.0"
